# Mystic_Mentor

./: .dockerignore  .gitignore  AUTHENTICATION_IMPLEMENTATION.md  Dockerfile  FEATURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES.md  PREMIUM_DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md  README.md  README_INTEGRATION.md  contextual_rag.py  docker-compose.production.yml  docker-compose.yml  document_manager.py  main.py  pyproject.toml  requirements.txt  run.py  start_https_server.py  start_web_api.py  start_web_api_debug.py  start_web_api_https.py  test_icon_fixes.py
Docs/: README_RAG.md  Vector_RAG_Implementation_Plan.md  archetypes.md  chinese_moon.md
archive/: README.md
archive/legacy-utils/: relevance_evaluator.py  semantic_domain_detector.py
config/: env.example  production.env.example  requirements_rag.txt
data/: document_registry.json  ifs_qa_responses.json
data/auth/: users.json
data/chroma_db/: precomputed_lunar_cache.json  processed_metadata.json
data/chroma_db_backup_20250607_124348/: relevance_metrics.json  relevance_monitoring.json
data/qa/: astrology_qa.md  crystals_qa.md  ifs_qa.md  lunar_qa.md
data/sessions/: 03cbf5ae-da6f-4e07-b01c-0b4c865292ea.json  1ac61eae-5128-4725-ac3a-8b8021103fea.json  1bbef88c-5d56-4de8-bf0b-fbe0ba0d10c7.json  23f1f9d9-0812-459a-958c-fda1d7164b7c.json  26a7c717-9cbf-49f5-84d1-3119eb332feb.json  32c2e00d-c3c1-4e3d-9e9e-dcb27c96b016.json  3a82781e-310e-4a26-9336-a2f1d0d5a316.json  3d32d1b3-8d45-4c4e-a9bb-ca20190b12f8.json  3f3f9efc-2477-4e36-96b4-596c3b609288.json  4134fca3-aeba-4743-9296-cd79547341c4.json  52b43192-0884-4b5f-804e-f53b59432b94.json  80f6514c-3b0a-46e3-957d-8699ab732277.json  82666127-f2a5-474b-87cc-ca1d5b3fd1fc.json  8ada79dc-4d75-4694-9f38-907351e8ca2e.json  (+16 more)
docs/: AUTH0_SETUP.md  SINGLE_DOMAIN_CHANGES.md  STRIPE_CLEANUP_SUMMARY.md  STRIPE_CUSTOMER_PORTAL.md  stripe_configuration.md
docs/esoteric/: ifs.md  (+7 more)
nginx/: nginx-http.conf  nginx-https.conf  nginx.conf
scripts/: deploy-production.sh  deploy_production.py
src/: main.py  web_api.py
ssl/: localhost.pem
tests/: AuthDebug.js  test_role_implementation.py
tools/: toggle_auth.py
web/: AUTH_TESTING_GUIDE.md  README.md  README_WEB_API.md  app.js  app_backup.js  app_broken.js  auth-callback.html  debug-headers.html  debug-token.html  index.html  themes.css
(+106 files in other folders)
