[project]
name = "esoteric-vectors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-google-genai>=2.1.5",
    "langchain[google]>=0.3.25",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langmem>=0.0.27",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "typing-extensions>=4.14.0",
]
